@@ -88,8 +88,9 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © 2013-2015 Michal Josef Špaček
-     BSD 2-Clause License
+    © 2013-2015 Michal Josef Špaček
+
+    BSD 2-Clause License
 
 VERSION
     0.06
